src/index.scss
@import 'node_modules/bulmaswatch/flatly/_variables';

// Colors
$primary: rgb(190, 5, 117);
$link: rgb(32, 63, 182);
$ig-blue: $link;
$info: #61afef;
$warning: #d19a66;
$success: #89ca78;
$family-sans-serif: 'Nunito';

// All the other imports
@import 'bulma';
@import '~bulma-tooltip';
@import 'node_modules/bulma-badge/dist/css/bulma-badge';
@import 'node_modules/bulmaswatch/flatly/_overrides';
@import 'node_modules/react-image-gallery/styles/scss/image-gallery.scss';

html,
.blackened {
  @extend .has-background-black;
}

// Gradient
.gradient {
  background: linear-gradient(45deg, $link, $primary);
}

// Gradient text
.gradientbg {
  background: linear-gradient(45deg, lighten($link, 25%), lighten($primary, 25%));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

// Gradient block {
.colorbar {
  height: 5px;
  width: 258px;
  margin: auto;
  margin-top: 3px;
  @extend .gradient;
}

// Nunito
@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');

// Section headers and such
#shortcuts strong {
  @extend .gradientbg;
}

.fancy {
  font-family: 'Nunito';
}

.fancy .title {
  font-weight: bold;
}

// Black background links
.hero.is-black p a,
.block.box p a,
.underlink {
  color: inherit;
  background-image: linear-gradient(to bottom, transparentize($grey, 0.5) 50%, transparent 50%);
  background-position: 0 1.02em;
  background-repeat: repeat-x;
  background-size: 2px 6px;
  text-decoration: none !important;
}

.hero.is-black p a:hover,
.block.box p a:hover,
.underlink:hover,
.hoverable:hover {
  color: lighten($link, 25%) !important;
}

.hero.is-black a:not(.button):not(.dropdown-item):not(.tag) {
  color: inherit;
}

// Fancy backgrounds
.city {
  background-image: linear-gradient(45deg, rgba(32, 63, 182, 0.7), rgba(190, 5, 117, 0.5)),
    url('./assets/pgh.jpg') !important;
  background-size: cover;
  background-position: center center;
  padding-top: 10px;
  padding-bottom: 70px;
}

.city .button:hover {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
}

.fade-bottom {
  mask-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 1) 5%,
    rgba(0, 0, 0, 1) 15% 85%,
    rgba(0, 0, 0, 0) 95%
  );
}

// Fancy boxes
.gradient-box {
  background: linear-gradient(45deg, lighten($link, 25%), lighten($primary, 25%));
  padding: 2px;
}

.gradient-box > .gradient-box-body {
  background: $black;
  border-radius: $radius;
  padding: 25px;
}

.oval-bg {
  position: absolute;
  bottom: 0%;
  right: 0%;
  height: 100%;
  width: 100%;
  border-radius: 100%;
  transition: all 200ms ease;
  opacity: 0.1;
}

.oval-bg-skew-1 {
  transform: skew(2deg);
}

.oval-bg-skew-2 {
  transform: skew(-2deg);
}

.oval-bg-rotate-1 {
  transform: rotate(-9deg);
}

.oval-bg-rotate-2 {
  transform: rotate(9deg);
}

.oval-bg-grey-1 {
  background: $grey;
}

.oval-bg-grey-2 {
  background: $grey-lighter;
}

.oval-bg-grey-3 {
  background: $grey-darker;
}

.oval-bg-1 {
  background: $link;
}

.oval-bg-2 {
  background: $primary;
}

.oval-bg-3 {
  background: $info;
}

.oval-bg-4 {
  background: $danger;
}

.oval-body {
  padding: 30px 40px;
}

.oval {
  position: relative;
  background: none;
  transition: all 200ms ease;
  margin-bottom: 15px;
}

.oval:hover {
  box-shadow: none !important;
}

.oval .title {
  transition: all 200ms ease;
}

.oval-bg:hover {
  cursor: pointer;
  background: lighten($link, 25%);
  opacity: 0.2;
}

.oval:hover .title {
  transform: scale(1.25);
}

// Shadow for profile picture
#profile {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
}

// Visit Pittsburgh link hover color
.footer-content a:hover {
  color: $white !important;
}

// Light blue link hover color
a:hover {
  color: $info;
}

a.tag:hover {
  text-decoration: none;
}

// Ignore link colors for block titles
.block .title {
  margin-bottom: 0.5rem;
}

// Spacing around descriptions and sections
#education {
  padding-bottom: 0.75rem;
}

#skills {
  padding-bottom: 1.5rem;
}

.course-title {
  margin-bottom: 0 !important;
}

.block .title a:hover {
  color: $link;
}

.block .subtitle {
  margin-top: 0.5rem !important;
  @extend .has-text-grey;
}

.block .subtitle:not(:last-child) {
  margin-bottom: 0.25rem;
}

.block .subtitle:last-child,
.block .content:not(:last-child) {
  margin-bottom: 1rem;
}

.block .award:not(:last-child) {
  margin-bottom: 0.25rem;
}

.box:not(:last-child) {
  margin-bottom: 1.25rem;
}

.block-description {
  padding-top: 0.5rem;
}

.details-bar:not(:last-child) {
  margin-bottom: 0;
}

.skill-group:not(:last-child) {
  margin-bottom: 0.75rem !important;
}

.block-section:not(:last-child) {
  padding-bottom: 3rem;
}

.section-label {
  padding-top: 20px;
  width: 120px;
}

.section-box-column {
  width: 300px;
}

.block-header:not(:last-child) {
  padding-bottom: 1.6rem;
}

.details-bars {
  margin-bottom: 2rem;
}

.details-bars > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.course-details > p:not(:last-child) {
  margin-bottom: 0;
}

// Sticky section labels
.section-label-sticky {
  padding-top: 15px;
}

.section-switcher-sticky {
  margin-top: 15px;
}

// Mobile-specific stuff
@media screen and (max-width: $tablet) {
  // Padding for profile hero
  .profile-hero > .hero-body {
    padding-bottom: 6.5rem;
  }

  // Sitemap column boxes
  .sitemap > .column {
    padding-bottom: 0;
  }

  // Full width section labels
  .section-label-sticky {
    padding-bottom: 15px;
    background-color: $black;
    width: 100% !important;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
    z-index: 39;
  }
}

// Expand/collapse course list
.course-list li:last-child {
  list-style-type: none;
}

// No margin after course work details
.course-list .notification {
  padding: 0.5rem;
}

// Don't capitalize block subtitles
.block .subtitle {
  text-transform: none;
}

// Don't limit iframe height
iframe.playlist-item {
  height: 380px;
}

// Cursor on image preview hover
.zoomable:hover {
  cursor: zoom-in;
}

// Search modal content
.search-modal {
  padding: 0rem 0.5rem;
  overflow-x: hidden;
}

// Search results container
.search-container {
  min-height: 100vh;
}

.search-modal .search-box {
  margin-top: 20vh;
}

// Navbars aren't rounded
.navbar {
  border-radius: 0;
}

// Center navbar elements
.navbar-item-centered {
  flex-grow: 1;
  justify-content: center;
}

// Do round section headers
.rounded {
  border-radius: $radius-large;
  @extend .has-shadow;
}

// Heroes don't decide white navbar color
.hero .navbar.is-white {
  background-color: white !important;
}

// Box shadow
.has-shadow {
  box-shadow: 0 0.5rem 1rem rgba(50, 50, 50, 0.25);
}

.dropdown-content {
  @extend .has-shadow;
}

// Bordered block boxes
.resume-body .box {
  background-color: white;
  border: 2px solid $grey-lighter;
  border-radius: $radius-large;
  transition: all 200ms ease;
}

.resume-body .box:hover {
  border-color: $grey-light;
}

// Block links
.block-link:hover {
  cursor: pointer;
}

// Image modal
.image-stamp-text {
  position: absolute;
  bottom: 40px;
  right: 16.5px;
  opacity: 0.6;
  font-size: 13px;
  color: $white-ter;
}

.image-stamp {
  position: absolute;
  bottom: 35px;
  right: 10px;
  height: 30px;
  width: 30px;
  border-radius: 100%;
}

.stamp-blue {
  transform: skew(2deg);
  background: $link;
  opacity: 0.4;
}

.stamp-purple {
  transform: skew(-10deg);
  background: $primary;
  opacity: 0.2;
}

.modal-image {
  max-height: calc(100vh - 160px);
  @extend .image-container;
}

// Image hero

.image-container {
  position: relative;
}

.image-hero {
  width: 100% !important;
  object-fit: cover;
  mask-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 5%,
    rgba(0, 0, 0, 1) 15% 85%,
    rgba(0, 0, 0, 0) 95%
  );
}

.image-hero-text {
  position: absolute;
  bottom: 5%;
  right: 1rem;
  width: 250px;
}

// Sentence hero
.sentence-hero {
  padding: 5rem 0rem;
}

// Particles hero
.particles-hero {
  mask-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 5%,
    rgba(0, 0, 0, 1) 15% 85%,
    rgba(0, 0, 0, 0) 95%
  );
}

.particles-hero canvas {
  background-color: rgba(255, 0, 0, 0.5);
  animation: bgColor 15s infinite linear;
  height: 25vh !important;
}

@keyframes bgColor {
  12.5% {
    background-color: rgba(255, 0, 0, 0.5);
  }
  25% {
    background-color: rgba(255, 165, 0, 0.5);
  }
  37.5% {
    background-color: rgba(255, 255, 0, 0.5);
  }
  50% {
    background-color: rgba(127, 255, 0, 0.5);
  }
  62.5% {
    background-color: rgba(0, 255, 255, 0.5);
  }
  75% {
    background-color: rgba(0, 0, 255, 0.5);
  }
  87.5% {
    background-color: rgba(153, 50, 204, 0.5);
  }
  100% {
    background-color: rgba(255, 20, 147, 0.5);
  }
}

// Fix links in tabs
.tabs > a {
  @extend li;
}

// Relative image sizing
.image-fullwidth {
  width: 100%;
}

.image-fullheight {
  height: 100%;
}

// Sticky header
.sticky-header {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
  z-index: 39;
  background-color: $black;
}

.sticky-header-padding {
  padding: 0.5rem 0;
}

// 100vh hero
.hero-body-centered {
  display: flex;
  align-items: center;
}

// Grow on hover
.hover-expand:hover {
  transform: scale(1.1);
}

